Final Product Correction V1.01 Contact.html
Linked PHP files to html form.

--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
 						<br/>
 
 <!-- Form Start -->
-						<form class="form-horizontal" method="post" action="email_form.php">
+						<form class="form-horizontal" method="post" action="contact_form.php">
 							<div class="form-group">
 								<label class="control-label col-sm-2" name="name">Name:</label>
 								<div class="col-sm-8">
